  - When address hashing is enabled compute the hash only once and pass it
    through the pipeline.

Set associative cache:
  - Copy the logic from the direct cache for picking either a new request
    or a side request to process.  The old code tried both in parallel, which
    is optimal for time but doubles the already large bloom filter test.

----------
mcadler     Date: Wed May  9 22:51:21 EDT 2012  CSN: CSN-leap-303
                  Thu May 10 02:51:21 UTC 2012


Directory tools/scripts
 leap-connect              Locally Modified          302 

Directory modules/leap/libraries/librl/storage
 counting-filter.bsv       Locally Modified          302 

Realized that the Bloom filter's counters don't have to be shared by all
hashes.  Using separate storage for counters associated with each hash
both has fewer false positives and can be implemented using LUTRAMs
instead of a large array of small adders and inefficient storage.

----------
mcadler     Date: Thu May 10 11:38:37 EDT 2012  CSN: CSN-leap-304
                  Thu May 10 15:38:37 UTC 2012


Directory modules/leap/libraries/librl/cache
 rl-direct-mapped-cache.bsv Locally Modified          303 
 rl-set-assoc-cache.bsv    Locally Modified          303 

Simplify the startReq rule predicates.

----------
mcadler     Date: Thu May 10 14:24:14 EDT 2012  CSN: CSN-leap-305
                  Thu May 10 18:24:14 UTC 2012


Directory config/pm/leap/submodels/fpgaenv
 fpgaenv-bare.apm          Locally Modified          304 

Directory modules/leap/virtual-platform
 fpga-environment-bare.awb Locally Modified          304 

Add fpga_components to the bare environment.

----------
mcadler     Date: Mon May 14 09:09:53 EDT 2012  CSN: CSN-leap-306
                  Mon May 14 13:09:53 UTC 2012


Directory modules/leap/build-support/build-pipelines/stages/software
 software.py               Locally Modified          305 

Set --export-dynamic linker option when embedding Python.